# WeatherForecastApp

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AI_SUMMARY.md  Dockerfile  LICENSE  PROMPT.txt  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.gemini/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: backend-ci.yml  ci.yml  e2e.yml  frontend-ci.yml  gemini.yml  gitleaks.yml  lhci.yml
backend/: .env.example  Dockerfile  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py  middleware_observability.py  middleware_rate_limit.py  observability.py
backend/app/api/: geocode.py  routes.py
backend/app/clients/: open_meteo.py
backend/app/core/: time_utils.py
backend/app/ml/: baseline.py  features.py  train.py
backend/app/model/: model.joblib
backend/app/scripts/: train_dummy_regression.py
backend/app/services/: feature_builder.py  open_meteo.py
backend/app/utils/: datetime_utils.py
backend/models/: 20250907_f3f6039_gbdt.joblib
backend/tests/: conftest.py  test_api_e2e.py  test_end_to_end_regression.py  test_open_meteo.py  test_predict_utc_boundary.py
docs/: SECURITY.md
frontend/: .biomeignore  .env.example  .gitignore  biome.json  eslint.config.mjs  lighthouserc.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/tests/: a11y.spec.ts  failure.spec.ts  (+3 more)
(+33 files in other folders)
