[project]
name = "weather-forecast-backend"
version = "0.1.0"
description = "FastAPI backend for WeatherForecastApp"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pandas>=2.2.2",
  "numpy>=2.0.1",
  "scikit-learn>=1.5.1"
]

[tool.uv]
dev-dependencies = [
  "pre-commit>=3.8.0",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "isort>=5.13.2",
  "pytest>=8.3.2"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

